--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7' # 修正時点で最新のversionを記載しています。1.xは動きませんのでご注意を。
 services:
   mysql:
-    image: mysql:5.7
+    image: mysql:8.0
     command: mysqld --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     # command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
     ports:
@@ -13,6 +13,7 @@ services:
       - ./db/mysql_data:/var/lib/mysql
       # configuration file
       - ./db/my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./logs:/var/log/mysql
     environment:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_USER: test
