--- a/db/my.cnf
+++ b/db/my.cnf
@@ -1,4 +1,3 @@
-
 [client]
 default-character-set=utf8mb4
 
@@ -13,6 +12,20 @@ collation-server=utf8mb4_bin
 init-connect='SET collation_connection = utf8mb4_bin'
 init-connect='SET NAMES utf8'
 
-innodb_file_format = Barracuda
+#innodb_file_format = Barracuda
 innodb_file_per_table = 1
-innodb_large_prefix
+#innodb_large_prefix
+
+
+# エラーログの設定
+log-error = /var/log/mysql/mysql-error.log
+
+# スロークエリログの設定
+slow_query_log = 1
+slow_query_log_file = /var/log/mysql/mysql-slow.log
+long_query_time = 5.0
+log_queries_not_using_indexes = 0
+
+# 実行ログの設定
+general_log = 1
+general_log_file = /var/log/mysql/mysql-query.log
